更新
”本地导入“和”用其他软件打开文本文件“修复完毕，现在能够正常的在Android11上使用。