@@ -1,6 +1,7 @@
 
 package com.ebook.basebook.mvp.view.adapter;
 
+import android.annotation.SuppressLint;
 import android.os.Environment;
 import android.view.LayoutInflater;
 import android.view.View;
@@ -21,21 +22,22 @@ import androidx.annotation.NonNull;
 import androidx.recyclerview.widget.RecyclerView;
 
 public class ImportBookAdapter extends RecyclerView.Adapter<ImportBookAdapter.Viewholder> {
-    private List<File> datas;
-    private List<File> selectDatas;
+    private final List<File> fileList;
+    private final List<File> selectFileList;
 
     public interface OnCheckBookListener {
         void checkBook(int count);
     }
 
-    private OnCheckBookListener checkBookListener;
+    private final OnCheckBookListener checkBookListener;
 
     public ImportBookAdapter(@NonNull OnCheckBookListener checkBookListener) {
-        datas = new ArrayList<>();
-        selectDatas = new ArrayList<>();
+        fileList = new ArrayList<>();
+        selectFileList = new ArrayList<>();
         this.checkBookListener = checkBookListener;
     }
 
+    @NonNull
     @Override
     public Viewholder onCreateViewHolder(ViewGroup parent, int viewType) {
         return new Viewholder(LayoutInflater.from(parent.getContext()).inflate(R.layout.view_adapter_importbook, parent, false));
@@ -43,29 +45,21 @@ public class ImportBookAdapter extends RecyclerView.Adapter<ImportBookAdapter.Vi
 
     @Override
     public void onBindViewHolder(final Viewholder holder, final int position) {
-        holder.tvNmae.setText(datas.get(position).getName());
-        holder.tvSize.setText(convertByte(datas.get(position).length()));
-        holder.tvLoc.setText(datas.get(position).getAbsolutePath().replace(Environment.getExternalStorageDirectory().getAbsolutePath(), "存储空间"));
+        holder.tvNmae.setText(fileList.get(position).getName());
+        holder.tvSize.setText(convertByte(fileList.get(position).length()));
+        holder.tvLoc.setText(fileList.get(position).getAbsolutePath().replace(Environment.getExternalStorageDirectory().getAbsolutePath(), "存储空间"));
 
-        holder.scbSelect.setOnCheckedChangeListener(new SmoothCheckBox.OnCheckedChangeListener() {
-            @Override
-            public void onCheckedChanged(SmoothCheckBox checkBox, boolean isChecked) {
-                if (isChecked) {
-                    selectDatas.add(datas.get(position));
-                } else {
-                    selectDatas.remove(datas.get(position));
-                }
-                checkBookListener.checkBook(selectDatas.size());
+        holder.scbSelect.setOnCheckedChangeListener((checkBox, isChecked) -> {
+            if (isChecked) {
+                selectFileList.add(fileList.get(position));
+            } else {
+                selectFileList.remove(fileList.get(position));
             }
+            checkBookListener.checkBook(selectFileList.size());
         });
         if (canCheck) {
             holder.scbSelect.setVisibility(View.VISIBLE);
-            holder.llContent.setOnClickListener(new View.OnClickListener() {
-                @Override
-                public void onClick(View v) {
-                    holder.scbSelect.setChecked(!holder.scbSelect.isChecked(), true);
-                }
-            });
+            holder.llContent.setOnClickListener(v -> holder.scbSelect.setChecked(!holder.scbSelect.isChecked(), true));
         } else {
             holder.scbSelect.setVisibility(View.INVISIBLE);
             holder.llContent.setOnClickListener(null);
@@ -73,14 +67,15 @@ public class ImportBookAdapter extends RecyclerView.Adapter<ImportBookAdapter.Vi
     }
 
     public void addData(File newItem) {
-        int position = datas.size();
-        datas.add(newItem);
+        int position = fileList.size();
+        fileList.add(newItem);
         notifyItemInserted(position);
         notifyItemRangeChanged(position, 1);
     }
 
     private Boolean canCheck = false;
 
+    @SuppressLint("NotifyDataSetChanged")
     public void setCanCheck(Boolean canCheck) {
         this.canCheck = canCheck;
         notifyDataSetChanged();
@@ -88,10 +83,10 @@ public class ImportBookAdapter extends RecyclerView.Adapter<ImportBookAdapter.Vi
 
     @Override
     public int getItemCount() {
-        return datas.size();
+        return fileList.size();
     }
 
-    class Viewholder extends RecyclerView.ViewHolder {
+    static class Viewholder extends RecyclerView.ViewHolder {
         LinearLayout llContent;
         TextView tvNmae;
         TextView tvSize;
@@ -100,11 +95,11 @@ public class ImportBookAdapter extends RecyclerView.Adapter<ImportBookAdapter.Vi
 
         public Viewholder(View itemView) {
             super(itemView);
-            llContent = (LinearLayout) itemView.findViewById(R.id.ll_content);
-            tvNmae = (TextView) itemView.findViewById(R.id.tv_name);
-            tvSize = (TextView) itemView.findViewById(R.id.tv_size);
-            scbSelect = (SmoothCheckBox) itemView.findViewById(R.id.scb_select);
-            tvLoc = (TextView) itemView.findViewById(R.id.tv_loc);
+            llContent = itemView.findViewById(R.id.ll_content);
+            tvNmae = itemView.findViewById(R.id.tv_name);
+            tvSize = itemView.findViewById(R.id.tv_size);
+            scbSelect = itemView.findViewById(R.id.scb_select);
+            tvLoc = itemView.findViewById(R.id.tv_loc);
         }
     }
 
@@ -112,21 +107,23 @@ public class ImportBookAdapter extends RecyclerView.Adapter<ImportBookAdapter.Vi
         DecimalFormat df = new DecimalFormat("###.#");
         float f;
         if (size < 1024) {
-            f = size / 1.0f;
-            return (df.format(new Float(f).doubleValue()) + "B");
+            f = size;
+            return (df.format(Float.valueOf(f).doubleValue()) + "B");
         } else if (size < 1024 * 1024) {
-            f = (float) ((float) size / (float) 1024);
-            return (df.format(new Float(f).doubleValue()) + "KB");
+            f = (float) size / (float) 1024;
+            return (df.format(Float.valueOf(f).doubleValue()) + "KB");
         } else if (size < 1024 * 1024 * 1024) {
-            f = (float) ((float) size / (float) (1024 * 1024));
-            return (df.format(new Float(f).doubleValue()) + "MB");
+            f = (float) size / (float) (1024 * 1024);
+            return (df.format(Float.valueOf(f).doubleValue()) + "MB");
         } else {
-            f = (float) ((float) size / (float) (1024 * 1024 * 1024));
-            return (df.format(new Float(f).doubleValue()) + "GB");
+            f = (float) size / (float) (1024 * 1024 * 1024);
+            return (df.format(Float.valueOf(f).doubleValue()) + "GB");
         }
     }
 
-    public List<File> getSelectDatas() {
-        return selectDatas;
+    public List<File> getSelectFileList() {
+        return selectFileList;
     }
+
+    public List<File> getFileList(){return fileList;}
 }
